--- a/views/albums.erb
+++ b/views/albums.erb
@@ -20,4 +20,6 @@
   <p>There are currently no records to display.</p>
 <% end %>
 
-<a href="/albums/new">Add a new album</a>
+<a href="/albums/new">Add a new album</a><br>
+<a href="/albums/year_sort">sort by year</a><br>
+<a href="/albums/alphabetical">sort by alphabetical</a>
