--- a/views/new_album.erb
+++ b/views/new_album.erb
@@ -4,6 +4,8 @@
   <div class="form-group">
     <label for="album_name">Album name</label>
     <input id="n" name="album_name" class="form-control" type="text">
+    <label for="album_release_year">Album release year</label>
+    <input id="n" name="album_release_year" class="form-control" type="text">
   </div>
   <button type="submit" class="btn">Add album</button>
 </form>
